@startuml
'https://plantuml.com/class-diagram

object main
class Manager {
    showcase map[string]Product
    Register()
    Create()
}
interface Product {
    {abstract}Use()
    {abstract}CreateClone()
}
class MessageBox {
    decoChar
    Use()
    CreateClone()
}
class UnderlinePen {
    ulChar
    Use()
    CreateClone()
}

main --> Manager: Uses >
Manager o-> Product
Product <|.. MessageBox
Product <|.. UnderlinePen

@enduml